--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
     <!-- Font Awesome for Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
+    <script src="https://js.paystack.co/v1/inline.js"></script>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
